<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyPage">

    <TextView

        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="42sp"
        android:text="WIL"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/slogun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="54dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="14sp"
        android:text="WhatILove"
        android:bufferType="spannable"
        android:textStyle="normal"
        android:gravity="center"
        />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="85dp"
        />

    <ImageButton
        android:id="@+id/profileButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginRight="29dp"
        android:contentDescription="GoMyPage"
        android:tooltipText="MyPage"
        android:src="@drawable/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="21dp"
        tools:ignore="TouchTargetSizeCheck"/>

    <de.hdodenhof.circleimageview.CircleImageView

        android:layout_width="123dp"
        android:layout_height="161dp"
        android:layout_gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="106dp"
        android:src="@drawable/face"
        app:civ_border_color="#000000"
        app:civ_border_overlay="true"

        app:civ_border_width="3dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="188dp"
        android:layout_marginTop="137dp"
        android:lineSpacingMultiplier="0.8"
        android:text="@string/name"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/black"/>

    <ImageButton
        android:id="@+id/editbutton"
        android:layout_width="158dp"
        android:layout_height="32dp"
        android:layout_marginLeft="188dp"
        android:layout_marginTop="209dp"
        android:src="@drawable/modifybutton"
        android:contentDescription="modificationButton"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editbutton"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/editbutton"
        app:layout_constraintEnd_toEndOf="@+id/editbutton"
        app:layout_constraintStart_toStartOf="@+id/editbutton"
        app:layout_constraintTop_toTopOf="@+id/editbutton"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:textColor="@color/black"
        android:id="@+id/idTag"
        android:layout_width="78dp"
        android:layout_height="30dp"
        android:text="@string/ID"
        android:textSize="20sp"
        android:layout_marginTop="301dp"
        android:layout_marginLeft="56dp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:textColor="@color/black"
        android:id="@+id/id"
        android:layout_width="220dp"
        android:layout_height="30dp"
        android:text="hellow world"
        android:textSize="20sp"
        android:layout_marginTop="301dp"
        android:layout_marginLeft="153dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        />
    <TextView
        android:textColor="@color/black"
        android:id="@+id/passTag"
        android:layout_width="78dp"
        android:layout_height="30dp"
        android:text="@string/pass"
        android:textSize="20sp"
        android:layout_marginTop="378dp"
        android:layout_marginLeft="56dp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:textColor="@color/black"
        android:id="@+id/pass"
        android:layout_width="220dp"
        android:layout_height="30dp"
        android:layout_marginLeft="153dp"
        android:layout_marginTop="378dp"
        android:gravity="center"
        android:inputType="textPassword"
        android:text="password"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />
    <TextView
        android:textColor="@color/black"
        android:id="@+id/residenceTag"
        android:layout_width="78dp"
        android:layout_height="30dp"
        android:text="@string/residence"
        android:textSize="20sp"
        android:layout_marginTop="455dp"
        android:layout_marginLeft="56dp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:textColor="@color/black"
        android:id="@+id/residence"
        android:layout_width="220dp"
        android:layout_height="30dp"
        android:text="경기도 구리~"
        android:textSize="20sp"
        android:layout_marginTop="455dp"
        android:layout_marginLeft="153dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        />
    <TextView
        android:textColor="@color/black"
        android:id="@+id/interestingTag"
        android:layout_width="78dp"
        android:layout_height="30dp"
        android:text="@string/interesting"
        android:textSize="20sp"
        android:layout_marginTop="532dp"
        android:layout_marginLeft="56dp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:textColor="@color/black"
        android:id="@+id/interesting"
        android:layout_width="220dp"
        android:layout_height="30dp"
        android:text="운동,음악"
        android:textSize="20sp"
        android:layout_marginTop="532dp"
        android:layout_marginLeft="153dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        />
    <TextView
        android:textColor="@color/black"
        android:id="@+id/mbtiTag"
        android:layout_width="78dp"
        android:layout_height="30dp"
        android:text="@string/mbti"
        android:textSize="20sp"
        android:layout_marginTop="609dp"
        android:layout_marginLeft="56dp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:textColor="@color/black"
        android:id="@+id/mbti"
        android:layout_width="220dp"
        android:layout_height="30dp"
        android:text="mbti"
        android:textSize="20sp"
        android:layout_marginTop="609dp"
        android:layout_marginLeft="153dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        />



</androidx.constraintlayout.widget.ConstraintLayout>