<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Modify">


<!--    <TextView-->
<!--        android:id="@+id/logo"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_margin="13dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        android:textSize="42sp"-->
<!--        android:text="WIL"-->
<!--        android:inputType="text"-->
<!--        android:textStyle="bold"-->
<!--        android:gravity="center"-->
<!--        android:textColor="@color/black"-->
<!--        />-->
<!--    <TextView-->
<!--        android:id="@+id/slogun"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_margin="54dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        android:textSize="14sp"-->
<!--        android:text="WhatILove"-->
<!--        android:bufferType="spannable"-->
<!--        android:textStyle="normal"-->
<!--        android:gravity="center"-->
<!--        />-->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="65dp"
        android:src="@drawable/logo"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="85dp"
        />

    <ImageButton
        android:id="@+id/profileButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginRight="29dp"
        android:contentDescription="GoMyPage"
        android:tooltipText="MyPage"
        android:src="@drawable/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="21dp"
        tools:ignore="TouchTargetSizeCheck"/>

    <de.hdodenhof.circleimageview.CircleImageView

        android:layout_width="123dp"
        android:layout_height="161dp"
        android:layout_gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="106dp"
        android:src="@drawable/face"
        app:civ_border_color="#000000"
        app:civ_border_overlay="true"

        app:civ_border_width="3dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="188dp"
        android:layout_marginTop="137dp"
        android:lineSpacingMultiplier="0.8"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/modificationButton"
        android:layout_width="158dp"
        android:layout_height="32dp"
        android:layout_marginLeft="188dp"
        android:layout_marginTop="209dp"
        android:src="@drawable/modifybutton"
        android:contentDescription="modificationButton"
        android:textAlignment="center"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/modificationButton"
        app:layout_constraintEnd_toEndOf="@+id/modificationButton"
        app:layout_constraintStart_toStartOf="@+id/modificationButton"
        app:layout_constraintTop_toTopOf="@+id/modificationButton"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/idTag"
        android:layout_width="78dp"
        android:layout_height="30dp"
        android:text="@string/ID"
        android:textSize="20sp"
        android:layout_marginTop="301dp"
        android:layout_marginLeft="56dp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />
    <TextView
        android:id="@+id/id"
        android:layout_width="220dp"
        android:layout_height="30dp"
        android:text="hellow world"
        android:textSize="20sp"
        android:layout_marginTop="301dp"
        android:layout_marginLeft="153dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/passTag"
        android:layout_width="78dp"
        android:layout_height="30dp"
        android:text="@string/pass"
        android:textSize="20sp"
        android:layout_marginTop="378dp"
        android:layout_marginLeft="56dp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/black"
        />

    <TextView
        android:textColor="@color/black"
        android:id="@+id/pass"
        android:layout_width="220dp"
        android:layout_height="30dp"
        android:layout_marginLeft="153dp"
        android:layout_marginTop="378dp"
        android:gravity="center"
        android:inputType="textPassword"
        android:text="password"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />
    <TextView
        android:id="@+id/residenceTag"
        android:layout_width="78dp"
        android:layout_height="30dp"
        android:text="@string/residence"
        android:textSize="20sp"
        android:layout_marginTop="455dp"
        android:layout_marginLeft="56dp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/residence"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="444dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="5dp"
        android:background="@drawable/edit_text"/>

    <TextView
        android:id="@+id/interestingTag"
        android:layout_width="78dp"
        android:layout_height="30dp"
        android:text="@string/interesting"
        android:textSize="20sp"
        android:layout_marginTop="532dp"
        android:layout_marginLeft="56dp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/interesting"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginLeft="153dp"
        android:layout_marginTop="523dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck"
        android:elevation="5dp"
        android:background="@drawable/edit_text"/>
    <TextView
        android:id="@+id/mbtiTag"
        android:layout_width="78dp"
        android:layout_height="30dp"
        android:text="@string/mbti"
        android:textSize="20sp"
        android:layout_marginTop="609dp"
        android:layout_marginLeft="56dp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/mbti"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginLeft="153dp"
        android:layout_marginTop="600dp"
        android:gravity="center"
        android:inputType="text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck"
        android:elevation="5dp"
        android:background="@drawable/edit_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>